Edited wiki page Introduction through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,23 +1,4 @@
 #labels Featured
 = Introduction =
 
-*MarkUtils* is a project to provide some facilities to the swing development.
-
-
-= Details =
-
-MarkUtils features:
-  * Models:
-    * [ObjectComboBoxModel]
-    * [ObjectTableModel]
-  * [Binder] - Bind all the fields of a form to a object with annotations
-  * [ConfigurationUtils] - Just save the preferences
-  * [ActionManager] - Map JButton directly to methods
-  * [Expression] - Solve math formulas as Strings
-  * Collections:
-    * [CollectionsUtil]
-    * [AggregateFunctions]
-
-== Help Us ==
-  * See the [ToDoList]
-  * Get the [http://code.google.com/p/markutils/source/checkout Source Code]
+This page was transfered to the new project Wiki: http://code.google.com/p/towel/wiki/Introduction
